=== 1.0.0 / 2014-01-14

* Moved from zucker gem into its own gem
