@@ -1,6 +1,6 @@
 = RubyEngine
 
-Provides a @RubyEngine@ to simplify checking on which implementation your Ruby programs is running.
+Provides a +RubyEngine+ to simplify checking on which implementation your Ruby programs is running.
 
 == Setup
 
@@ -14,14 +14,18 @@ In Ruby:
 
 == Usage
 
-    RubyEngine: "# outputs the interpreter name"
-    RubyEngine.mri?: "RubyEngine.mri? # true if using the official Ruby interpreter"
-    RubyEngine.jruby?: "RubyEngine.jruby? # true if using JRuby"
-    RubyEngine.rubinius?: "RubyEngine.rubinius? # true if using rubinius"
-    RubyEngine.ree?: "RubyEngine.ree? # true if using enterprise edition"
-    RubyEngine.ironruby?: "RubyEngine.ironruby? # true if using IronRuby"
-    RubyEngine.macruby?: "RubyEngine.macruby? # true if using MacRuby"
-    RubyEngine.cardinal?: "RubyEngine.cardinal? # true if using parrot"
+    RubyEngine.to_s # outputs the interpreter name
+    
+    RubyEngine.is? 'jruby' # true for jruby
+    
+    # There are some query methods defined: 
+    RubyEngine.mri?
+    RubyEngine.jruby?
+    RubyEngine.rubinius?
+    RubyEngine.ree?
+    RubyEngine.ironruby?
+    RubyEngine.macruby?
+    RubyEngine.cardinal?
 
 == J-_-L
 
