@@ -1,4 +1,6 @@
 === 1.0.0 / 2014-01-14
 
-* Moved from zucker gem into its own gem
+* Return "ruby" for MRI (instead of "mri")
+* Return "unknown" if RUBY_ENGINE is not set (instead of "mri")
+* Moved from zucker 13.1 gem into its own gem
 
